# crashlens

./: .env.example  .gitignore  .gitleaks.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
dashboard/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
dashboard/e2e/: tsconfig.json
dashboard/e2e/fixtures/: seed-events.json  shared.ts
dashboard/e2e/screenshots/: .gitkeep
dashboard/e2e/setup/: auth.setup.ts
dashboard/e2e/specs/: 01-signup.spec.ts  02-pipeline.spec.ts  03-members.spec.ts  04-settings.spec.ts  05-browser-sdk.spec.ts  06-admin.spec.ts
dashboard/src/: App.tsx  main.tsx  styles.css
dashboard/src/auth/: AuthContext.tsx
dashboard/src/components/: AdminNav.tsx  AppLayout.tsx  CopyButton.tsx  LevelBadge.tsx  OccurrenceChart.tsx  OrgNav.tsx  RequireAuth.tsx  StateViews.tsx
dashboard/src/lib/: api.ts  endpoints.ts  format.ts  token.ts  types.ts  useAsyncData.ts  useOrg.ts
dashboard/src/pages/: AdminOrgsPage.tsx  AdminOverviewPage.tsx  AdminUsersPage.tsx  InvitePage.tsx  IssueDetailPage.tsx  IssuesListPage.tsx  LoginPage.tsx  MembersPage.tsx  OrgOverviewPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  SignupPage.tsx
deploy/: Caddyfile  api.Dockerfile  dashboard.Dockerfile  railway.Dockerfile  worker.Dockerfile
deploy/postgres-init/: 01-app-user.sh
docs/: LAUNCH-CHECK.md  PROTOCOL.md  backup-restore.md  configuration.md  screenshots.md  sdks.md  self-hosting.md  upgrading.md
scripts/: README.md  backup.sh  restore.sh
sdks/browser/: README.md  build.mjs  package-lock.json  package.json  tsconfig.json
sdks/browser/src/: breadcrumbs.ts  client.ts  dsn.ts  index.ts  instrument.ts  stacktrace.ts  transport.ts  types.ts  util.ts
sdks/browser/test/: breadcrumbs.test.ts  client.test.ts  dsn.test.ts  instrument.test.ts  stacktrace.test.ts  transport.test.ts
sdks/node/: README.md  build.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdks/node/e2e/: crasher.mjs  marker.mjs  run_e2e.mjs
sdks/node/src/: breadcrumbs.ts  client.ts  dsn.ts  express.ts  index.ts  instrument.ts  scope.ts  stacktrace.ts  transport.ts  types.ts  util.ts
sdks/node/test/: client.test.ts  dsn.test.ts  helpers.ts  instrument.test.ts  scope.test.ts  stacktrace.test.ts  transport.test.ts
sdks/node/test/fixtures/: uncaught-sole.mjs  uncaught-withhandler.mjs  unhandled.mjs
sdks/python/: README.md  pyproject.toml
sdks/python/e2e/: crasher.py  run_e2e.py
sdks/python/src/crashlens/: __init__.py  _client.py  _dsn.py  _envelope.py  _hooks.py  _scope.py  _transport.py  _version.py  asgi.py  flask.py  logging.py
sdks/python/tests/: conftest.py  test_dsn.py  test_envelope.py  test_integrations.py  test_transport.py
server/: README.md  alembic.ini  pyproject.toml
server/alembic/: env.py  script.py.mako
server/alembic/versions/: 0001_v1_schema.py  0002_auth_account_security.py  0003_partition_fn_secdef.py  0003_partition_fn_security_definer.py  0004_comment_author_nullable.py  0005_system_projects_grant.py  0006_release_regression.py  0007_admin_role.py
server/app/: __init__.py  accounts.py  admin.py  alerts.py  audit.py  auth.py  cli.py  config.py  db.py  health.py  ingest.py  issues.py  main.py  projects.py  ratelimit.py  security.py  sourcemaps.py  worker.py
server/app/jobs/: __init__.py  alerts.py  process_event.py  retention.py
server/app/models/: __init__.py  base.py  schema.py
server/app/routes/: admin.py  alerts.py  audit.py  auth.py  health.py  ingest.py  issues.py  orgs.py  projects.py  sourcemaps.py
server/tests/: conftest.py  test_admin_integration.py  test_admin_unit.py  test_alerts_integration.py  test_alerts_unit.py  test_async_loop_scope.py  test_audit_integration.py  test_audit_unit.py  test_auth_integration.py  test_auth_unit.py  test_compose_isolation_contract.py  test_cross_tenant_gate.py  test_db_integration.py  test_health.py  test_ingest_integration.py  test_ingest_unit.py  test_issues_integration.py  test_issues_unit.py  test_migrations_meta.py  test_models_unit.py  test_perf_smoke.py  test_process_event_integration.py  test_process_event_unit.py  test_projects_integration.py  test_projects_unit.py  test_retention_jobs.py  test_single_container_mode.py  test_sourcemaps_integration.py  test_sourcemaps_unit.py
server/tests/fixtures/sourcemaps/: app.min.js  app.min.js.map
