[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crashlens-server"
version = "0.0.1"
description = "Crashlens API and background worker."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic-settings>=2.5,<3",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "redis>=5.1,<6",
    "arq>=0.26,<0.27",
    "alembic>=1.13,<2",
    "argon2-cffi>=23.1,<24",
    "pyjwt>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "httpx>=0.27,<0.28",
    "ruff>=0.7,<0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "db: integration test requiring a live PostgreSQL (skips if unreachable)",
]
