[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crashlens-server"
version = "0.0.1"
description = "Crashlens API and background worker."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic-settings>=2.5,<3",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "redis>=5.1,<6",
    "arq>=0.26,<0.27",
    "alembic>=1.13,<2",
    "argon2-cffi>=23.1,<24",
    "pyjwt>=2.9,<3",
    "python-multipart>=0.0.12,<0.0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=1,<2",
    "httpx>=0.27,<0.28",
    "ruff>=0.7,<0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# One shared session event loop for every async test AND every async fixture.
# The db-integration suites bind module-scoped engines/connections in async
# fixtures and use them from many tests. pytest-asyncio's default gives each
# test its own function-scoped loop, so a module-scoped fixture's asyncpg
# connections are created on one loop and used/disposed across others -- the
# "another operation is in progress" / "Event loop is closed" errors that broke
# the db suite in CI. Pinning both scopes to "session" puts every fixture and
# test on the same loop, so module-scoped engines live on the loop that uses
# them. asyncio_default_test_loop_scope was added in pytest-asyncio 0.26.0,
# which is why the pin is >=1,<2 (0.24 has only the fixture-scope option).
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "db: integration test requiring a live PostgreSQL (skips if unreachable)",
    "isolation: proves cross-tenant isolation (RLS deny, cross-org denial, org-scope 403s); hard-gated in CI",
]
