[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crashlens"
version = "0.1.0"
description = "Zero-dependency Python SDK for Crashlens self-hosted error monitoring"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Crashlens" }]
keywords = ["error-monitoring", "crash-reporting", "observability", "crashlens"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Bug Tracking",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/crashlens/crashlens"
Source = "https://github.com/crashlens/crashlens"

[tool.hatch.build.targets.wheel]
packages = ["src/crashlens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
